# finance_pdf_summarizer_2.12.25

./: README.md
finance_update 2 copy/: README.md  __init__.py  __main__.py  colab_runner.ipynb  config.py  constants.py  coverage.xml  get_dropbox_token.py  pyproject.toml  report_pipeline.py  requirements.txt  test_env.py
finance_update 2 copy/analysis_archive/2025/01-January/19/: analysis_20250119_223402.json
finance_update 2 copy/analysis_archive/2025/01-January/31/: analysis_20250131_232932.json  analysis_20250131_235207.json
finance_update 2 copy/analysis_archive/2025/02-February/01/: analysis_20250201_002251.json  analysis_20250201_102456.json  analysis_20250201_103307.json
finance_update 2 copy/clients/: __init__.py  api_clients.py  dropbox_client.py  openai_client.py
finance_update 2 copy/memlog/: combined_initial_summaries.md  implementation_summary.md  refactoring_plan.md
finance_update 2 copy/monitoring/: prometheus.yml
finance_update 2 copy/services/: analysis_store.py  batch_processor.py  chunk_manager.py  email_notifier.py  metrics_extractor.py  pdf_fetcher.py  prompt_manager.py  summarizer_service.py  summary_validator.py  text_extractor.py  topic_analyzer.py  validation_service.py
finance_update 2 copy/tests/: conftest.py  helpers.py  test_batch_processor.py  test_chunk_manager.py  test_metrics_extractor.py  test_prompt_manager.py  test_summarization.py  test_summarizer_service.py  test_validation_service.py
finance_update 2 copy/tests/fixtures/: responses.json
finance_update 2 copy/tests/integration/: test_pipeline.py
finance_update 2 copy/tests/load/: locustfile.py
finance_update 2 copy/tests/mocks/: openai_client.py
finance_update 2 copy/tests/unit/: test_pipeline_unit.py
finance_update 2 copy/utils/: email_handler.py  exceptions.py  executive_summary.py  log_handler.py  pdf_processor.py  structured_extractor.py  text_processor.py
(+14 files in other folders)
